# python-keepassxc-browser

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: tests.yml
keepassxc_browser/: cli.py
