[metadata]
name = keepassxc-browser-cli
version = 1.0.0
url = https://github.com/hrehfeld/python-keepassxc-browser
author = Hauke Rehfeld
author_email = pypi.org@haukerehfeld.de
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent
    Topic :: Security
    Topic :: Software Development :: Libraries
license = AGPL-3.0
description = Access the KeepassXC Browser API from python

[options]
zip_safe = True
packages = find:
install_requires =
    pysodium
    tldextract
    pywin32; platform_system == "Windows"

[options.entry_points]
console_scripts =
    keepassxc_browser_cli = keepassxc_browser.cli:main

[flake8]
extend_ignore = E128,E501

